dev/mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: dev
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
        volumes:
          - name: mongo-storage
            persistentVolumeClaim: 
                claimName: mongo-pv-claim
        containers:
          - name: mongodb
            image: mongo
            ports:
              - containerPort: 27017
            volumeMounts:
               - mountPath: "/data/db"
                 name: mongo-storage

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: dev
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
